align NEW; bug 494112 p=milos
git-svn-id: http://svn.mozilla.org/addons/trunk@30468 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main.css
+++ b/site/app/webroot/css/amo2009/main.css
@@ -669,7 +669,7 @@ span.new {
     font-size: 0.611em;
 }
 
-a:link, a:active, a:visited, a:hover, a:focus, h3, .secondary {
+h3 .secondary a:link, h3 .secondary a:active, h3 .secondary a:visited, h3 .secondary a:hover, h3 .secondary a:focus {
     vertical-align: middle;
 }
 
